add Java17 samples